--- a/pom.xml
+++ b/pom.xml
@@ -20,8 +20,8 @@
         <version>1.0.1</version>
     </parent>
 
-    <groupId>javax.xml.soap</groupId>
-    <artifactId>javax.xml.soap-api</artifactId>
+    <groupId>jakarta.xml.soap</groupId>
+    <artifactId>jakarta.xml.soap-api</artifactId>
     <version>1.5.0-SNAPSHOT</version>
     <description>SAAJ API - Provides the API for creating and building SOAP messages.</description>
 
@@ -160,8 +160,9 @@
             <plugin>
                 <groupId>org.glassfish.build</groupId>
                 <artifactId>spec-version-maven-plugin</artifactId>
-                <version>1.2</version>
+                <version>1.5</version>
                 <configuration>
+                	<specMode>jakarta</specMode>
                     <spec>
                         <nonFinal>${non.final}</nonFinal>
                         <jarType>api</jarType>
