--- a/pom.xml
+++ b/pom.xml
@@ -20,15 +20,15 @@
         <version>1.0.1</version>
     </parent>
 
-    <groupId>javax.xml.soap</groupId>
-    <artifactId>javax.xml.soap-api</artifactId>
-    <version>1.4.1-SNAPSHOT</version>
+    <groupId>jakarta.xml.soap</groupId>
+    <artifactId>jakarta.xml.soap-api</artifactId>
+    <version>1.5.0-SNAPSHOT</version>
     <description>SAAJ API - Provides the API for creating and building SOAP messages.</description>
 
     <properties>
         <api.package>javax.xml.soap</api.package>
-        <spec.version>1.4</spec.version>
-        <new.spec.version>1.4.1</new.spec.version>
+        <spec.version>1.5</spec.version>
+        <new.spec.version>1.5.0</new.spec.version>
         <non.final>false</non.final>
         <findbugs.version>3.0.4</findbugs.version>
         <findbugs.exclude>exclude.xml</findbugs.exclude>
@@ -160,8 +160,9 @@
             <plugin>
                 <groupId>org.glassfish.build</groupId>
                 <artifactId>spec-version-maven-plugin</artifactId>
-                <version>1.2</version>
+                <version>1.5</version>
                 <configuration>
+                	<specMode>jakarta</specMode>
                     <spec>
                         <nonFinal>${non.final}</nonFinal>
                         <jarType>api</jarType>
