--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,6 @@
         </developer>
     </developers>
 
-    <inceptionYear>2008</inceptionYear>
-
     <issueManagement>
         <system>IssueTracker</system>
         <url>https://github.com/eclipse-ee4j/saaj-api/issues</url>
@@ -83,11 +81,6 @@
     </mailingLists>
 
     <dependencies>
-        <dependency>
-            <groupId>jakarta.activation</groupId>
-            <artifactId>jakarta.activation-api</artifactId>
-            <version>${activation.version}</version>
-        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -433,6 +426,13 @@
             <activation>
                 <jdk>[9,)</jdk>
             </activation>
+            <dependencies>
+                <dependency>
+                    <groupId>jakarta.activation</groupId>
+                    <artifactId>jakarta.activation-api</artifactId>
+                    <version>${activation.version}</version>
+                </dependency>
+            </dependencies>
             <build>
                 <pluginManagement>
                     <plugins>
