--- a/pom.xml
+++ b/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2013, 2018 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2013, 2019 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Distribution License v. 1.0, which is available at
@@ -36,12 +36,12 @@
     <artifactId>jakarta.xml.soap-api</artifactId>
     <version>1.5.0-SNAPSHOT</version>
     <description>SAAJ API - Provides the API for creating and building SOAP messages.</description>
-    <name>${extension.name} API</name>
+    <name>Jakarta SOAP with Attachments API</name>
     <url>https://projects.eclipse.org/proposals/eclipse-project-jax-ws</url>
 
     <scm>
         <connection>scm:git:git://github.com/eclipse-ee4j/saaj-api.git</connection>
-        <developerConnection>scm:git:git@github.com/eclipse-ee4j/saaj-api.git</developerConnection>
+        <developerConnection>scm:git:git:@github.com:eclipse-ee4j/saaj-api.git</developerConnection>
         <url>https://github.com/eclipse-ee4j/saaj-api</url>
         <tag>HEAD</tag>
     </scm>
@@ -72,7 +72,7 @@
 
     <mailingLists>
         <mailingList>
-            <name>Eclipse Project for JAX-WS mailing list</name>
+            <name>Jakarta XML Web Services mailing list</name>
             <post>jaxws-dev@eclipse.org</post>
             <subscribe>https://accounts.eclipse.org/mailing-list/jaxws-dev</subscribe>
             <unsubscribe>https://accounts.eclipse.org/mailing-list/jaxws-dev</unsubscribe>
@@ -101,7 +101,7 @@
                 <plugin>
                     <groupId>org.glassfish.copyright</groupId>
                     <artifactId>glassfish-copyright-maven-plugin</artifactId>
-                    <version>1.50</version>
+                    <version>2.2</version>
                 </plugin>
                 <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
@@ -279,7 +279,7 @@
                         <Implementation-Version>${spec.implementation.version}</Implementation-Version>
                         <Specification-Version>${spec.specification.version}</Specification-Version>
                         <Bundle-Description>
-                            Java(TM) SAAJ ${spec.version} API Design Specification
+                            Jakarta SOAP with Attachments ${spec.version} API Design Specification
                         </Bundle-Description>
                         <Specification-Vendor>${vendor.name}</Specification-Vendor>
                         <_include>-${basedir}/osgi.bundle</_include>
@@ -312,15 +312,19 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
                     <doclint>all</doclint>
+                    <docfilessubdirs>true</docfilessubdirs>
                     <groups>
                         <group>
-                            <title>SAAJ API Documentation</title>
+                            <title>Jakarta SOAP with Attachments API Documentation</title>
                             <packages>javax.xml.soap</packages>
                         </group>
                     </groups>
-                    <bottom>
-                        <![CDATA[<br>Copyright &#169; {inceptionYear}&#x2013;{currentYear} {vendor.name}.
-                        All rights reserved.<br>Comments to : <a href="mailto:jaxws-dev@eclipse.org">jaxws-dev@eclipse.org</a>.]]>
+                    <header><![CDATA[<br>Jakarta SOAP with Attachments API v${project.version}]]>
+                    </header>
+                    <bottom><![CDATA[
+Comments to: <a href="mailto:jaxws-dev@eclipse.org">jaxws-dev@eclipse.org</a>.<br>
+Copyright &#169; {inceptionYear}&#x2013;{currentYear} Oracle and/or its affiliates. All rights reserved.<br>
+Use is subject to <a href="{@docRoot}/doc-files/EFSL.html" target="_top">license terms</a>.]]>
                     </bottom>
                 </configuration>
             </plugin>
