--- a/api/pom.xml
+++ b/api/pom.xml
@@ -37,7 +37,7 @@
         <non.final>false</non.final>
         <activation.version>1.2.1</activation.version>
         <legal.doc.source>${project.basedir}/..</legal.doc.source>
-        <vendor.name>Oracle</vendor.name>
+        <vendor.name>Eclipse Foundation</vendor.name>
     </properties>
 
     <groupId>jakarta.xml.soap</groupId>
@@ -326,7 +326,7 @@
                     </header>
                     <bottom><![CDATA[
 Comments to: <a href="mailto:jaxws-dev@eclipse.org">jaxws-dev@eclipse.org</a>.<br>
-Copyright &#169; {inceptionYear}&#x2013;{currentYear} Oracle and/or its affiliates. All rights reserved.<br>
+Copyright &#169; 2019 Eclipse Foundation. All rights reserved.<br>
 Use is subject to <a href="{@docRoot}/doc-files/speclicense.html" target="_top">license terms</a>.]]>
                     </bottom>
                 </configuration>
