update jdoc config
Signed-off-by: Lukas Jungmann <lukas.jungmann@oracle.com>

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -364,7 +364,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <configuration>
-                    <doclint>all</doclint>
+                    <release>11</release>
                     <docfilessubdirs>true</docfilessubdirs>
                     <groups>
                         <group>
