--- a/spec/pom.xml
+++ b/spec/pom.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
 
-    Copyright (c) 2017, 2019 Oracle and/or its affiliates. All rights reserved.
+    Copyright (c) 2017, 2020 Oracle and/or its affiliates. All rights reserved.
 
     This program and the accompanying materials are made available under the
     terms of the Eclipse Public License v. 2.0, which is available at
@@ -21,12 +21,12 @@
     <parent>
         <groupId>org.eclipse.ee4j</groupId>
         <artifactId>project</artifactId>
-        <version>1.0.5</version>
+        <version>1.0.6</version>
         <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>jakarta.xml.soap</groupId>
-    <artifactId>jakarta.xml.soap-spec</artifactId>
+    <artifactId>soap-spec</artifactId>
     <packaging>pom</packaging>
     <version>1.4-SNAPSHOT</version>
     <name>Jakarta SOAP with Attachments</name>
@@ -111,7 +111,7 @@
                         </goals>
                         <configuration>
                             <backend>html5</backend>
-                            <outputFile>${project.build.directory}/generated-docs/jakarta.xml.soap-spec-${project.version}.html</outputFile>
+                            <outputFile>${project.build.directory}/generated-docs/${project.artifactId}-${project.version}.html</outputFile>
                             <attributes>
                                 <doctype>book</doctype>
                                 <status>${status}</status>
@@ -134,7 +134,7 @@
                         </goals>
                         <configuration>
                             <backend>pdf</backend>
-                            <outputFile>${project.build.directory}/generated-docs/jakarta.xml.soap-spec-${project.version}.pdf</outputFile>
+                            <outputFile>${project.build.directory}/generated-docs/${project.artifactId}-${project.version}.pdf</outputFile>
                             <attributes>
                                 <pdf-stylesdir>${project.basedir}/src/theme</pdf-stylesdir>
                                 <pdf-style>jakartaee</pdf-style>
@@ -155,7 +155,7 @@
                     </execution>
                 </executions>
                 <configuration>
-                    <sourceDocumentName>jakarta.xml.soap-spec.adoc</sourceDocumentName>
+                    <sourceDocumentName>${project.artifactId}.adoc</sourceDocumentName>
                     <sourceHighlighter>coderay</sourceHighlighter>
                     <attributes>
                         <revnumber>${project.version}</revnumber>
